--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@tanstack/react-query": "^5.90.21",
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.1",
@@ -23,6 +25,7 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.13.0",
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
