--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@auth/express": "^0.12.1",
     "@google/generative-ai": "^0.24.1",
@@ -23,7 +23,8 @@
     "mongoose": "^9.2.1",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
