--- a/backend/package.json
+++ b/backend/package.json
@@ -14,17 +14,18 @@
   "type": "module",
   "dependencies": {
     "@auth/express": "^0.12.1",
+    "@auth/mongodb-adapter": "^3.11.1",
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.2.1",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
