--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.1",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.574.0",
     "react": "^19.2.0",
     "react-confetti": "^6.4.0",
